# stereotopointcloud

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
lib/: libHalf.la  libIex.la  libIexMath.la  libIlmImf.la  libIlmImfUtil.la  libIlmThread.la  libImath.la
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
python/: depthmap_orig.exr  jpointcloud.py  poly.ply  stuff.ply  testout.ply
share/eigen3/cmake/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake  Eigen3Targets.cmake
share/pkgconfig/: eigen3.pc
src/: main.cpp
